--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>CAPP</h1>
-<p>This will be the home of all CAPP related development. CAPP is the abbreviation of: <strong>C</trong>ontext <strong>A</strong>ware <strong>P</strong>rivacy <strong>P</strong>latform</p>
+<p>This will be the home of all CAPP related development. CAPP is the abbreviation of: <strong>C</strong>ontext <strong>A</strong>ware <strong>P</strong>rivacy <strong>P</strong>latform</p>
 </body>
 </html>
