--- a/index.html
+++ b/index.html
@@ -24,14 +24,23 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CAPP</h3>
+<p>CAPP is the abbreviation of: <strong>C</strong>ontext <strong>A</strong>ware <strong>P</strong>rivacy <strong>P</strong>latform</p>
+</p>
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A new approach</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>ith CAPP, we intend to research ways of providing information belonging to an individual to someone else, without the need for large centralized databases, without leaving (traces of) data behind that might make that individual vulnerable.
+
+Without being sure that we will find such a mechanism, we feel inspired, challenged and supported by stuff like this:
+- making it intervention driven;
+- using a very small scope for proof of concept(s) (such as the emergency room use-case ICE-d);
+- basing the exchange of information on conflict detection; 
+- Applying a minimal data approach;
+- focusing on communication as opposed to registration;
+- Using attributes to communicatie the output of the conflict detection; (groen-oranje-rood);
+- identifying areas where AI/Fuzzy Logic can be used to ascertain reliability of incomplete data, of provide interpretation of multiple facts;
+- Scalability (by focusing on a pull-model vs a push-model.</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
