--- a/index.html
+++ b/index.html
@@ -30,18 +30,33 @@
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A new approach</h3>
 
-<p>ith CAPP, we intend to research ways of providing information belonging to an individual to someone else, without the need for large centralized databases, without leaving (traces of) data behind that might make that individual vulnerable.
+<p>With CAPP, we intend to research ways of providing information belonging to an individual to someone else, without the need for large centralized databases, without leaving (traces of) data behind that might make that individual vulnerable.
 
 Without being sure that we will find such a mechanism, we feel inspired, challenged and supported by stuff like this:
-- making it intervention driven;
-- using a very small scope for proof of concept(s) (such as the emergency room use-case ICE-d);
+<ul>making it intervention driven;
+<li>
+  - using a very small scope for proof of concept(s) (such as the emergency room use-case ICE-d);
+  </li>
+<li>
 - basing the exchange of information on conflict detection; 
+  </li>
+<li>
 - Applying a minimal data approach;
-- focusing on communication as opposed to registration;
-- Using attributes to communicatie the output of the conflict detection; (groen-oranje-rood);
-- identifying areas where AI/Fuzzy Logic can be used to ascertain reliability of incomplete data, of provide interpretation of multiple facts;
-- Scalability (by focusing on a pull-model vs a push-model.</p>
-
+  </li>
+<li>
+  - focusing on communication as opposed to registration;
+  </li>
+<li>
+  - Using attributes to communicatie the output of the conflict detection; (groen-oranje-rood);    
+  </li>
+<li>
+  - identifying areas where AI/Fuzzy Logic can be used to ascertain reliability of incomplete data, of provide interpretation of multiple facts;  
+</li>
+<li>
+  - Scalability (by focusing on a pull-model vs a push-model.  
+</li>
+</ul>
+</p>
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
 
