--- a/index.html
+++ b/index.html
@@ -33,27 +33,30 @@
 <p>With CAPP, we intend to research ways of providing information belonging to an individual to someone else, without the need for large centralized databases, without leaving (traces of) data behind that might make that individual vulnerable.
 
 Without being sure that we will find such a mechanism, we feel inspired, challenged and supported by stuff like this:
-<ul>making it intervention driven;
-<li>
-  - using a very small scope for proof of concept(s) (such as the emergency room use-case ICE-d);
+<ul>
+  <li>
+    making it intervention driven;
   </li>
-<li>
-- basing the exchange of information on conflict detection; 
+  <li>
+    using a very small scope for proof of concept(s) (such as the emergency room use-case ICE-d);
   </li>
-<li>
-- Applying a minimal data approach;
+  <li>
+    basing the exchange of information on conflict detection; 
   </li>
-<li>
-  - focusing on communication as opposed to registration;
+  <li>
+    Applying a minimal data approach;
   </li>
-<li>
-  - Using attributes to communicatie the output of the conflict detection; (groen-oranje-rood);    
+  <li>
+    focusing on communication as opposed to registration;
   </li>
-<li>
-  - identifying areas where AI/Fuzzy Logic can be used to ascertain reliability of incomplete data, of provide interpretation of multiple facts;  
+  <li>
+    Using attributes to communicatie the output of the conflict detection; (groen-oranje-rood);    
+  </li>
+  <li>
+    identifying areas where AI/Fuzzy Logic can be used to ascertain reliability of incomplete data, of provide interpretation of multiple facts;  
 </li>
-<li>
-  - Scalability (by focusing on a pull-model vs a push-model.  
+  <li>
+    Scalability (by focusing on a pull-model vs a push-model.  
 </li>
 </ul>
 </p>
