--- a/index.html
+++ b/index.html
@@ -13,70 +13,12 @@
     <![endif]-->
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Context Aware Privacy Platform</h1>
-        <p>Intervention driven, Conflict detection focused.</p>
-
-
-        <p class="view"><a href="https://github.com/cap-platform">View My GitHub Profile</a></p>
-
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CAPP</h3>
-<p>CAPP is the abbreviation of: <strong>C</strong>ontext <strong>A</strong>ware <strong>P</strong>rivacy <strong>P</strong>latform</p>
-</p>
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>A new approach</h3>
-
-<p>With CAPP, we intend to research ways of providing information belonging to an individual to someone else, without the need for large centralized databases, without leaving (traces of) data behind that might make that individual vulnerable.
-
-Without being sure that we will find such a mechanism, we feel inspired, challenged and supported by stuff like this:
-<ul>
-  <li>
-    making it intervention driven;
-  </li>
-  <li>
-    using a very small scope for proof of concept(s) (such as the emergency room use-case ICE-d);
-  </li>
-  <li>
-    basing the exchange of information on conflict detection; 
-  </li>
-  <li>
-    Applying a minimal data approach;
-  </li>
-  <li>
-    focusing on communication as opposed to registration;
-  </li>
-  <li>
-    Using attributes to communicatie the output of the conflict detection; (groen-oranje-rood);    
-  </li>
-  <li>
-    identifying areas where AI/Fuzzy Logic can be used to ascertain reliability of incomplete data, of provide interpretation of multiple facts;  
-</li>
-  <li>
-    Scalability (by focusing on a pull-model vs a push-model.  
-</li>
-</ul>
-</p>
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>We are</h3>
-
-<p>
-  <ul>
-    <li>Marie-José Bonthuis</li>
-    <li>Eds de Keizer</li>
-    <li>Martijn Veening</li>
-    <li>Lykle de Vries</li>
-  </ul>
-</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    This content has been moved to <a href="https://github.com/cap-platform/whitepaper">the CAPP whitepaper repository</a> on GitHub. <br>You will be directed automatically in 5 seconds.
+    <script>
+      setTimeout(function(){
+        location.href='https://github.com/cap-platform/whitepaper';
+      },5000);
+      
+    </script>
   </body>
 </html>
